# phishing-analyzer-prod

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: app.py
phishing_analyzer/: __init__.py  health.py  logging_config.py
phishing_analyzer/agents/: attachment_agent.py  content_agent.py  domain_agent.py  header_agent.py  ingestion.py  reporter_agent.py  risk_agent.py  url_agent.py
phishing_analyzer/config/: risk_config.py
phishing_analyzer/orchestration/: prefect_flow.py
phishing_analyzer/safety/: guardrails.py
phishing_analyzer/tools/: attachment_tool.py  url_tool.py  virustotal_tool.py
phishing_analyzer/utils/: __init__.py  error_handler.py  resilience.py
samples/: Help shape Advent of Cyber 2026 🎄.eml  Updates to how privacy settings work on Play.eml  dhl_delivery_failure_phish.eml  microsoft_password_reset_phish.eml
tests/unit/: test_attachment_agent.py  test_attachment_tool.py  test_content_agent.py  test_domain_agent.py  test_domain_no_vt.py  test_domain_vt_paths.py  test_ingestion_agent.py  test_reporter_agent.py  test_risk_agent.py  test_url_agent.py  test_url_clean.py  test_url_malformed.py  test_vt_hash.py  test_vt_not_configured.py  test_vt_tool_paths.py
